<resources>
    <string name="app_name">Droid Café</string>
    <string name="title_activity_main">Droid Café</string>
    <string name="action_settings">Налаштування</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="zheadernvabar_subtitle">Give me money</string>
    <string name="zheadernavbar_action_1_title">Order</string>
    <string name="title_activity_order">Order</string>

    <string name="hello_world">Hello world!</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="dial_phone_label_text">Dial phone</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_checkboxes">CheckboxesActivity</string>
    <string name="choose_topping_text">Choose your toppings</string>
    <string name="chocolate_syrup_text">Chocolate syrup</string>
    <string name="sprinkles_text">Sprinkles</string>
    <string name="cherries_text">Cherries</string>
    <string name="crushed_nuts_text">Crushed nuts</string>
    <string name="oreo_text">Oreo cookie crumbles</string>
    <string name="show_toppings_text">Show toppings</string>
    <string name="action_favorite_text">Favorite</string>
    <string name="action_status_text">Status</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="dialog_title_text">Tap to test the alert</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <string name="date_picker_title_text">Hello : ) Choose a date, please!</string>

    <string name="datepicker">datePicker</string>
    <string name="date">"Date: "</string>
    <string name="time">"Time: "</string>
    <string name="title_activity_tab_bar">TabBarActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">These are the top stories:</string>
    <string name="tab_2">Tech news you can use:</string>
    <string name="tab_3">Cooking tips:</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="title_activity_scorekeeper">ScorekeeperActivity</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

    <array name="sports_images">
        <item>@drawable/img_baseball</item>
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_basketball</item>
        <item>@drawable/img_bowling</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_golf</item>
        <item>@drawable/img_running</item>
        <item>@drawable/img_soccer</item>
        <item>@drawable/img_swimming</item>
        <item>@drawable/img_tabletennis</item>
        <item>@drawable/img_tennis</item>
    </array>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>

    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>

    <string name="title_activity_sports">SportsActivity</string>
    <string name="title_activity_sport_detail">SportDetailActivity</string>
    <string name="sub_title_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris rhoncus ligula in suscipit consequat. Donec nibh dui, sagittis non hendrerit quis, lacinia at eros. Phasellus quis tellus lacinia, malesuada augue non, malesuada massa. Donec a aliquet quam, eget sodales lectus. Sed eros ex, commodo ut condimentum nec, cursus eget nunc. Quisque vitae eros dignissim, ultricies erat vitae, facilisis justo. Sed et eros felis. Integer a sagittis lacus. Suspendisse aliquet, enim eget rhoncus hendrerit, ex metus suscipit lacus, auctor feugiat lacus nunc et nibh. Aenean iaculis suscipit massa a molestie. Integer vitae neque nec justo dictum sagittis. Donec quam nisi, rhoncus ac luctus nec, vestibulum ultricies tortor. Integer vel nulla id nisl facilisis elementum vitae non nibh. Ut et ante elementum, ornare lorem id, aliquam orci. Nam ullamcorper, augue non facilisis venenatis, justo quam vulputate felis, a interdum mi odio quis nulla. Integer bibendum justo ut leo dignissim euismod. Pellentesque in metus orci. Integer in felis ex. Nunc id tristique ligula. Proin felis elit, vulputate sit amet placerat non, egestas sit amet nulla. Fusce a dui velit. Sed sit amet ultrices nulla.</string>
    <string name="title_activity_async_task">AsyncTaskActivity</string>
    <string name="napping">Napping...</string>
    <string name="title_activity_who_wrote_it">WhoWroteItActivity</string>

    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_results">no results ... : (</string>
    <string name="loading">Loading...</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="title_activity_web_page">WebPageActivity</string>
    <string name="enter_url">Enter URL:</string>

    <string-array name="web_protocol_spinner_items">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="title_activity_power_receiver">PowerReceiverActivity</string>
    <string name="send_broadcast_text">Send Custom Broadcast</string>
    <string name="title_activity_notify_me">NotifyMeActivity</string>
    <string name="title_activity_stand_up">StandUpActivity</string>
    <string name="alarm_off">Alarm off</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_on_desc">Stand Up Alarm On!</string>
    <string name="alarm_off_desc">Stand Up Alarm Off!</string>
    <string name="title_activity_hello_shared_prefs">HelloSharedPrefsActivity</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
</resources>