<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/count_textview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/default_background"
        android:gravity="center"
        android:text="@string/default_count"
        android:textColor="@android:color/black"
        android:textSize="112sp"/>

    <Button
        android:id="@+id/black_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:onClick="changeBackground"
        android:text="@string/black_button"
        android:layout_below="@id/count_textview"/>

    <Button
        android:id="@+id/red_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red_background"
        android:onClick="changeBackground"
        android:text="@string/red_button"
        android:layout_toRightOf="@id/black_background_button"/>

    <Button
        android:id="@+id/blue_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_background"
        android:onClick="changeBackground"
        android:text="@string/blue_button"
        android:layout_toRightOf="@id/red_background_button"/>

    <Button
        android:id="@+id/green_background_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green_background"
        android:onClick="changeBackground"
        android:text="@string/green_button"
        android:layout_toRightOf="@id/blue_background_button"/>

    <Button
        android:id="@+id/count_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="countUp"
        android:text="@string/count_button"
        android:layout_below="@id/black_background_button"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/reset_button"
        android:layout_toRightOf="@id/count_button"/>

</RelativeLayout>