<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dunno.aenen.forgottobuy.WhoWroteItActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:text="@string/instructions" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookInput"
        android:layout_below="@+id/instructions"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/input_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:layout_marginTop="8dp"
        android:text="@string/button_text"
        android:layout_below="@+id/bookInput"
        android:onClick="searchBooks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleText"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/searchButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/authorText"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/titleText"/>




</RelativeLayout>
