<com.amazon.euclid.widget.ZParallaxBackground xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:euclid="http://schemas.android.com/apk/res/euclid"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.amazon.euclid.widget.ZContainer
            android:id="@+id/content_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            euclid:autoPadding="true">

            <com.amazon.euclid.widget.ZHeaderNavigationBar xmlns:amazon="http://schemas.android.com/apk/res/amazon"
                android:id="@+id/zheadernavigationbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                amazon:headerSubtitle="@string/zheadernavbar_action_1_title"
                amazon:headerTitle="@string/title_activity_main"
                amazon:upNavigationEnabled="true"
                euclid:layout_depth="wrap_content"
                euclid:widgetTheme="@euclid:style/Theme.Euclid.Dark" />
        </com.amazon.euclid.widget.ZContainer>

        <com.amazon.euclid.widget.ZShadowReceiver
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            euclid:shadowDepth="@euclid:dimen/globalLayerScreen">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.amazon.euclid.widget.ZContainer
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.amazon.euclid.widget.ZLinearLayout
                        android:id="@+id/topping_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="24dp"
                        android:orientation="vertical"
                        euclid:layout_depth="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right">

                        <com.amazon.euclid.widget.ZTextView
                            android:id="@+id/topping_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_topping_text"
                            euclid:layout_depth="wrap_content"
                            android:layout_margin="10dp"/>

                        <com.amazon.euclid.widget.ZCheckBox
                            android:id="@+id/chocolate_syrup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onCheckBoxClick"
                            android:text="@string/chocolate_syrup_text"
                            euclid:textLocation="left"
                            android:layout_margin="10dp" />

                        <com.amazon.euclid.widget.ZCheckBox
                            android:id="@+id/sprinkles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onCheckBoxClick"
                            android:text="@string/sprinkles_text"
                            euclid:textLocation="left"
                            android:layout_margin="10dp" />

                        <com.amazon.euclid.widget.ZCheckBox
                            android:id="@+id/crushed_nuts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onCheckBoxClick"
                            android:text="@string/crushed_nuts_text"
                            euclid:textLocation="left"
                            android:layout_margin="10dp" />

                        <com.amazon.euclid.widget.ZCheckBox
                            android:id="@+id/cherries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onCheckBoxClick"
                            android:text="@string/cherries_text"
                            euclid:textLocation="left"
                            android:layout_margin="10dp" />

                        <com.amazon.euclid.widget.ZCheckBox
                            android:id="@+id/oreo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onCheckBoxClick"
                            android:text="@string/oreo_text"
                            euclid:textLocation="left"
                            android:layout_margin="10dp" />

                        <com.amazon.euclid.widget.ZButton
                            android:id="@+id/show_toppings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            euclid:layout_depth="wrap_content"
                            android:onClick="onShowToppingsClick"
                            android:text="@string/show_toppings_text"
                            android:layout_margin="10dp" />

                        <!--<com.amazon.euclid.widget.ZLinearLayout-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--euclid:layout_depth="wrap_content"-->
                            <!--android:orientation="horizontal"-->
                            <!--android:layout_margin="10dp">-->

                            <!--<com.amazon.euclid.widget.ZExtrudedText-->
                                <!--android:id="@+id/threedtext1"-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--euclid:layout_depth="wrap_content"-->
                                <!--android:text="Crushed nuts"-->
                                <!--android:textColor="#000"-->
                                <!--android:textSize="30sp"-->
                                <!--euclid:autoSize="false"-->
                                <!--euclid:extrusionColor="#FFF"-->
                                <!--euclid:letterSpacing="1"-->
                                <!--euclid:textDepth="10sp" />-->

                            <!--<com.amazon.euclid.widget.ZCheckBox-->
                                <!--android:id="@+id/zCheckBox1"-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="50dp"-->
                                <!--euclid:layout_depth="wrap_content"-->
                                <!--android:onClick="onCheckBoxClick"-->
                                <!--android:paddingLeft="10dp"/>-->
                        <!--</com.amazon.euclid.widget.ZLinearLayout>-->

                    </com.amazon.euclid.widget.ZLinearLayout>
                </com.amazon.euclid.widget.ZContainer>
            </LinearLayout>
        </com.amazon.euclid.widget.ZShadowReceiver>
    </LinearLayout>
</com.amazon.euclid.widget.ZParallaxBackground>